# paradex-bot

./: bot.py  main.py  pyproject.toml
